fixed clipping issue

--- a/pages/rps/rps.css
+++ b/pages/rps/rps.css
@@ -65,7 +65,7 @@
     color:whitesmoke;
     background-color: rgb(0,0,0,0.2);
     border:none;
-    height: 60px;
+    height: 5vh;
     width: 180px;
     border-radius: 9999px;
     font-size: 3vmin;
